After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 313854 - Path bar: ellipsize long directory names
Path bar: ellipsize long directory names
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Path Bar
3.1.x
Other Linux
: Normal normal
: 3.2
Assigned To: Nautilus Maintainers
Nautilus Maintainers
nautilus[EMC08]
: 323379 440302 474979 489689 495682 550215 594261 595604 596430 600270 631190 648552 675208 687603 (view as bug list)
Depends on:
Blocks: 719628
 
 
Reported: 2005-08-18 16:36 UTC by Michaël Arnauts
Modified: 2013-12-01 11:05 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
screenshot of the problem (21.80 KB, image/png)
2006-04-25 14:38 UTC, Teppo Turtiainen
  Details
Patch to limit the pathbar buttons to 200 pixels in width (3.27 KB, patch)
2009-06-27 18:27 UTC, Ted M Lin
none Details | Review

Description Michaël Arnauts 2005-08-18 16:36:34 UTC
Easy to reproduce:

- Create a folder with a long name, like:
"LOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOONG"
- Enter that folder
- You will see that the pathbar dissapears out of view (it looks a bit cool
though :p)

Perhaps some ...'s should be added when a foldername exceeds a numer of chars.

If you take a smaller foldername like
"LOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOONG", you will
see that at some point (resize the window a bit), the pathbar doubles the size
(in height).
Comment 1 Teppo Turtiainen 2005-08-21 19:09:16 UTC
Confirmed with Nautilus 2.11.91 on Ubuntu Breezy.
Comment 2 Teppo Turtiainen 2006-04-25 14:38:32 UTC
Created attachment 64273 [details]
screenshot of the problem
Comment 3 Dominik Zabłotny 2006-09-04 20:30:57 UTC
Confirmed with Nautilus 2.14.3 on Ubuntu Dapper
Comment 4 Teppo Turtiainen 2007-03-10 19:29:13 UTC
Still occurs with Nautilus 2.17.92 on Ubuntu Feisty.
Comment 5 Martin Ejdestig 2007-11-24 16:38:58 UTC
> Perhaps some ...'s should be added when a foldername exceeds a numer of chars.

Nah, it should be added when a folder doesn't fit. :)
Comment 6 Emmanuel Fleury 2008-11-10 19:21:49 UTC
This issue is fixed in Nautilus 2.25.1. Should be tagged as 'FIXED'.
Comment 7 Cosimo Cecchi 2008-11-10 19:57:37 UTC
(In reply to comment #6)
> This issue is fixed in Nautilus 2.25.1. Should be tagged as 'FIXED'.

No, it's not fixed, updating fields.
Comment 8 Cosimo Cecchi 2008-11-10 20:10:52 UTC
*** Bug 474979 has been marked as a duplicate of this bug. ***
Comment 9 Emmanuel Fleury 2008-11-11 11:05:34 UTC
Isn't Bug 550215 a duplicate of this one ?
Comment 10 Cosimo Cecchi 2008-11-11 11:22:52 UTC
*** Bug 550215 has been marked as a duplicate of this bug. ***
Comment 11 Mateusz Barucha 2009-03-15 00:56:09 UTC
In Windows 7, they have just solved a similar issue:

http://blogs.msdn.com/e7/archive/2009/03/13/a-few-more-changes-from-beta-to-rc.aspx
See 7. Going up?:
"(...) the parent folder’s button will appear in the address bar at all times and therefore going ‘up’ will always be a single click away in a predictable location.  When there isn’t enough room to display the parent folder’s full name, it will appear truncated instead of going into the overflow.  If space is especially tight, then the current folder’s name may appear truncated too, but in all cases the parent folder’s button will remain as a click target in the address bar. 

In addition to making the address bar an even better tool for navigating ‘up’ in Explorer, this change also makes it easier to tell where your are as you navigate around since you can now see at least part of the parent folder’s name.  It also avoids introducing any more redundant buttons to the Explorer frame and hence taking away any more screen space from being able to see your address."

***

I'm one of the users that hide the toolbar and use pathbar to navigate up in a folders' hierarchy - it would be nice if a similar approach would be used in Nautilus. It's a navigational control after all :)
Comment 12 Ted M Lin 2009-06-27 18:27:56 UTC
Created attachment 137467 [details] [review]
Patch to limit the pathbar buttons to 200 pixels in width

Here's a possible patch to allow ellipsis into the pathbar button labels (and a tooltip to show the entire label).  The solution provided in this patch isn't great (it forcibly limits the width of the button), it's a step.
Comment 13 Cosimo Cecchi 2009-10-07 20:33:37 UTC
*** Bug 596430 has been marked as a duplicate of this bug. ***
Comment 14 Cosimo Cecchi 2009-10-07 20:33:45 UTC
*** Bug 595604 has been marked as a duplicate of this bug. ***
Comment 15 Cosimo Cecchi 2009-11-02 16:55:34 UTC
*** Bug 600270 has been marked as a duplicate of this bug. ***
Comment 16 Cosimo Cecchi 2010-05-27 23:23:35 UTC
*** Bug 495682 has been marked as a duplicate of this bug. ***
Comment 17 Cosimo Cecchi 2010-05-27 23:23:51 UTC
*** Bug 440302 has been marked as a duplicate of this bug. ***
Comment 18 Cosimo Cecchi 2010-05-27 23:24:28 UTC
*** Bug 489689 has been marked as a duplicate of this bug. ***
Comment 19 Allan Day 2010-05-28 14:04:52 UTC
*** Bug 594261 has been marked as a duplicate of this bug. ***
Comment 20 Allan Day 2010-06-20 18:40:04 UTC
*** Bug 323379 has been marked as a duplicate of this bug. ***
Comment 21 Allan Day 2010-06-20 20:04:53 UTC
Changing component as part of ongoing bug reorganisation work.
Comment 22 Cosimo Cecchi 2010-10-03 18:14:35 UTC
*** Bug 631190 has been marked as a duplicate of this bug. ***
Comment 23 Cosimo Cecchi 2011-04-25 18:23:17 UTC
*** Bug 648552 has been marked as a duplicate of this bug. ***
Comment 24 André Klapper 2011-08-11 19:31:41 UTC
Still valid in 3.1.4.
Comment 25 Cosimo Cecchi 2012-05-01 12:46:05 UTC
*** Bug 675208 has been marked as a duplicate of this bug. ***
Comment 26 Asif Ali Rizvan 2012-05-01 15:23:13 UTC
seeing 6-7 year old bugs, I'm feeling de-moralized to report any bugs... What's the point, if developers don't care to fix them! sad...
Comment 27 André Klapper 2012-05-01 15:27:17 UTC
Asif Ali Rizvan: Please take meta issues to a forum or a mailing list. For more info, see the "No obligations" section of https://bugzilla.mozilla.org/page.cgi?id=etiquette.html and feel free to provide a patch.
Comment 28 Asif Ali Rizvan 2012-05-01 15:43:19 UTC
(In reply to comment #27)
> Asif Ali Rizvan: Please take meta issues to a forum or a mailing list. For more
> info, see the "No obligations" section of
> https://bugzilla.mozilla.org/page.cgi?id=etiquette.html and feel free to
> provide a patch.

My apologies, seeing at least 15 duplicates here in the last 6 years. I'm just shocked and awed.  I am not demanding. I won't bother again. Patch already provided by Ted M Lin for nautilus 2.26 in 2009. Thanks.
Comment 29 Cosimo Cecchi 2012-06-04 19:52:43 UTC
So sorry this was left without resolution for this long time.
I now pushed a patch very similar to the one proposed in this report to git master; even though I don't completely like the approach (ideally we would know how much space we can fit dynamically), it's better than what we have now in most of the cases, and fixes this very annoying ancient report.
Comment 30 Asif Ali Rizvan 2012-06-05 05:43:28 UTC
(In reply to comment #29)
> So sorry this was left without resolution for this long time.
> I now pushed a patch very similar to the one proposed in this report to git
> master; even though I don't completely like the approach (ideally we would know
> how much space we can fit dynamically), it's better than what we have now in
> most of the cases, and fixes this very annoying ancient report.

Thank you so much Cosimo Cecchi for such a kind gesture.
Comment 31 Milan Bouchet-Valat 2012-06-05 08:42:55 UTC
Very nice to see this kind of detail fixed at last! ;-)
Comment 32 Sebastien Bacher 2012-06-13 16:39:18 UTC
that change seems buggy, all buttons are ellipsized there, i.e [Userdir][bin] is displaying as [Use...][...]. The "Images" dir is displayed as "Im...s", etc
Comment 33 Cosimo Cecchi 2012-11-05 16:39:20 UTC
*** Bug 687603 has been marked as a duplicate of this bug. ***