pathbar: set a maximum label width for pathbar buttons

Set a maximum allowed width of 250px for pathbar button requisitions,
and ellipsize after that. This fixes buttons disappearing completely
from the pathbar in case there was not enough space to show the complete
folder name,

I am not sure I completely like this approach in all the situations,
since there might be some value in showing more of a very long folder
name if there's space available on screen, but unfortunately, it's not
really possible without restructuring completely the way NautilusPathBar
allocates children.

Adapted for master, and slightly modified from an initial patch by
Ted M Lin <tedmlin@gmail.com>

https://bugzilla.gnome.org/show_bug.cgi?id=313854